# complete-ai-development-pipeline-canonical-phase-plan

./: .aiderignore  .aiignore  .env.example  .gitignore  .gitsync.yml  .invoke.yaml.example  .pipeignore  .pre-commit-config.yaml  2025-11-17-add-export-ollamahosthttp1722716111434-to.txt  2025-11-22-find-the-main-excution-scripts-move-the-procees.txt  5_Phase Completion Plan Module Migration & Pattern Automation Integration.md  =0.40.0  =9.0  AGENT3_SUMMARY.md  AGENTS.md  AGENTS_codex_fix.txt  AGENT_1_COMPLETION_REPORT.md  AGENT_3_COMPLETION_REPORT.md  AGENT_3_WS_6T_07_COMPLETE.md  AGENT_4_COMPLETION_SUMMARY.md  AGENT_SUMMARY.txt  AI Development Pipeline_Hybrid GUI Analysis.txt  AIDER_OLLAMA_DEEP.md  AIDER_OLLAMA_DEEPSEEK_QWEN_Systematic Troubleshooting Guide for AI Agents.md  AI_CODEBASE_COMPLIANCE_REPORT.md  AI_GENERATED_FILES.md  AI_NAVIGATION_PHASE_PLAN.md  ANTI_PATTERN_GUARDS.md  API_INDEX.md  ARCHIVE_LOCATION.md  AST_WORKSTREAM_COMPLETION_SUMMARY.md  AUTOMATION_100_PERCENT_COMPLETE.md  AUTOMATION_CHAIN_GAP_ANALYSIS_CLI_FOCUSED.md  AUTOMATION_COMPONENTS_REPORT.md  AUTOMATION_GAP_ANALYSIS_REPORT.md  AUTOMATION_GAP_FIXES_COMPLETE.md  AUTOMATION_GAP_FIXES_SESSION_1.md  AUTOMATION_GAP_FIXES_SESSION_2.md  Application Delivery Copilot TEMPLATE.txt  Application Delivery Copilot TEMPLATEv2.md  (+404 more)
.AIM_ai-tools-registry/: INVOKE LOCATION.txt
.ai/: codebase-map.yaml  common-patterns.md  context.md
.ai-orch/: README.md
.claude/: README.md  settings.local.json
.config/: project-profile.yaml
.exec/: EXEC-002-ACTIVE.md
.execution/: anti_patterns.yaml  checkpoints.jsonl  (+4 more)
(+7667 files in other folders)
