[project]
name = "aim-plus"
version = "1.0.0"
description = "Unified AI Development Environment Manager"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "PyYAML>=6.0",
    "keyring>=24.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "jsonschema>=4.20.0",
]

[project.scripts]
aim = "aim.cli.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["aim/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
