[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pipeline"
version = "0.1.0"
description = "Complete AI Development Pipeline - Canonical Phase Plan"
requires-python = ">=3.8"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
markers = [
    "integration: marks tests as integration tests (requires real tools installed)",
    "slow: marks tests as slow running (>10 seconds)",
]
